--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,4 +1,4 @@
-.search-data{
+/* .search-data{
   width: 300px;
   height: 40px;
   border-radius: 30px;
@@ -24,5 +24,24 @@
     border: 2px solid rgb(200, 211, 240);
     padding: 6px 6px 2px 5px;
     border-radius: 30px;
-}
+} */
 
+#bgimg{
+    padding:5%;
+    width:90% ; height:600px ;  margin:auto; 
+    background-image: url("https://a0.muscache.com/im/pictures/53e51dcb-8fad-4ce8-b61c-8a7a369267bf.jpg?im_w=1200");
+    background-size: 100%;
+    background-repeat:no-repeat;
+    background-position-y: center;
+    
+  }
+  
+  #bgimg button{
+    margin-top:40%;
+    margin-left:45%;
+   
+  }
+
+  #search-input:focus {
+      outline:none;
+  }
