--- a/src/css/Landingpage.css
+++ b/src/css/Landingpage.css
@@ -46,3 +46,24 @@
   #search-input:focus {
       outline:none;
   }
+  #bgimge1{
+   border-radius:5% ;
+    padding:5%;
+    width:90% ; height:400px ;  margin:auto; 
+    background-image: url("https://a0.muscache.com/im/pictures/b2f98185-f3bf-40db-ba8d-da0bceeccc65.jpg?im_w=720");
+    background-size: 100%;
+    background-repeat:no-repeat;
+    background-position-y: center;
+    
+  }
+  #bgimge2{
+    border-radius:5% ;
+    padding:5%;
+    width:90% ; height:400px ;  margin:auto; 
+    background-image: url("https://a0.muscache.com/im/pictures/aec597d9-9c5c-4746-965c-d3e1643299f7.jpg?im_w=320");
+    background-size: 100%;
+    background-repeat:no-repeat;
+    background-position-y: center;
+    
+  }
+
