--- a/src/css/Landingpage.css
+++ b/src/css/Landingpage.css
@@ -9,11 +9,11 @@
     
   }
   
-  #bgimg button{
+  /* #bgimg button{
     margin-top:40%;
     margin-left:45%;
    
-  }
+  } */
 
   #bgimge1{
    border-radius:5% ;
