--- a/src/css/Place.css
+++ b/src/css/Place.css
@@ -122,3 +122,31 @@ width:300px;
     margin: 10px;
 
 }
+.bedroom>div >img{
+    margin-left: 100px;
+    height: 300px;
+    width: 300px;
+    border-radius: 50px;
+}
+.bedroom{
+    display: grid;
+    grid-template-columns: 30% 60%;
+}
+.bedroom-ptag{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+.bedroom-ptag h3{
+    margin-left: 15%;
+    line-height: 40px;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.bedroom-ptag > div{
+    margin: 40px;
+    padding: 20px;
+}
+.bedroom-ptag h1{
+    line-height: 30px;
+    font-size: 20px;
+}
