--- a/src/css/Place.css
+++ b/src/css/Place.css
@@ -16,6 +16,7 @@ h1{
     grid-template-columns: 50% 50%;
     padding: 30px;
     min-height: 300px;
+    margin-left: 3%;
 }
 #five-images img{
     max-height: 150px;
@@ -30,6 +31,7 @@ h1{
     grid-template-columns: 50% 50%;
     grid-gap:20px;
     justify-content: space-around;
+    margin-right: 20px;
 
 }
 
