--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -41,6 +41,7 @@
       border: #F5F5F5;
       box-shadow: 4px 3px 8px 1px #969696;
       -webkit-box-shadow: 4px 3px 8px 1px #969696;
+      cursor: pointer;
   
 
   }
